--- a/uncompiled_scss/styles/step_two.scss
+++ b/uncompiled_scss/styles/step_two.scss
@@ -9,6 +9,55 @@
       }
     }
   }
+  .indicator {
+    justify-content: flex-start;
+    flex-direction: row;
+    display: flex;
+    &.input-blocks {
+      input {
+        width: 30%;
+        margin-right: 10px;
+      }
+    }
+  }
+  .head {
+    input {
+      width: 13%;
+    }
+  }
+
+  .clothes {
+    display: inline-flex;
+    flex-direction: row;
+
+    label {
+      width: 27%;
+      margin-right: 17px;
+    }
+    .input-blocks {
+      display: inline-flex;
+      select {
+        margin-right: 64px;
+      }
+    }
+    input {
+      width: 18%;
+    }
+  }
+  .some {
+    label {
+      width: 23%;
+    }
+  }
+  .input-block {
+    display: inline-flex;
+    justify-content: flex-start;
+    input {
+      margin-right: 30px;
+      width: 20%;
+    }
+
+  }
 
   .activity-info {
     padding: 0 34% 0 43px;
@@ -76,33 +125,9 @@
       }
     }
   }
-  .indicator {
-    input {
-      margin-right: 45px;
-    }
-    label:first-child {
-      margin-right: 133px;
-      margin-left: 0;
-      padding-left: 0;
-    }
-  }
   .flex {
     display: inline-flex;
     justify-content: flex-end;
-
-    .input-block {
-      display: inline-flex;
-      justify-content: flex-end;
-      width: 68%;
-      input {
-        width: 30%;
-        margin-right: 70px;
-      }
-      select {
-        width: 32%;
-        margin-right: 16px;
-      }
-    }
   }
 
   .input-blocks {
@@ -124,17 +149,7 @@
       width: 100%;
     }
   }
-  .input-block {
-    justify-content: flex-start;
-    label {
-      width: 20%;
-    }
-    input {
-      margin-right: 21px;
-      width: 20%;
-    }
 
-  }
   .contract-download {
     margin: 40px 0;
     img {
@@ -189,19 +204,16 @@
       width: 30%;
     }
   }
+
+
   .calculator {
     float: right;
-    .count-button {
-      border-radius: 0px;
-      padding: 0px;
+    .count-button{
+      border-radius: 0;
       margin-left: 10px;
-      width: 50px;
-      height: 50px;
-    }
-  }
-  .some {
-    input {
-      margin-left: 138px;
+      width: 70px;
+      height: 70px;
+      position: relative;
     }
   }
 
