--- a/uncompiled_scss/styles/_step_one.scss
+++ b/uncompiled_scss/styles/_step_one.scss
@@ -17,25 +17,28 @@
   .title {
     margin-bottom: 40px;
   }
-  .input-checkbox {
-    margin: 50px 0 50px 25%;
+  .gender{
+    margin-bottom: 30px;
     label{
-      padding-left: 40px;
-      margin-right: 30px;
+      padding-right: 111px;
+    }
+  }
+  .input-checkbox{
+    margin: 30px 0 50px 26%;
+    label{
+      padding-right: 100px;
     }
   }
   .input-blocks {
+    margin-bottom: 10px;
     label {
-      width: 25%;
-      float: left;
       line-height: 50px;
-      text-align: left;
+      vertical-align: top;
       text-transform: capitalize;
     }
     input {
-      width: 50%;
+      width: 100%;
       color: #777777;
-      display: block;
 
       padding: 30px 10px 8px 15px;
       margin-bottom: 20px;
@@ -51,7 +54,7 @@
     display: flex;
     flex-wrap: wrap;
     .photo-blocks {
-      width: 25%;
+      flex-basis: 25%;
       padding: 0 25px;
 
       .vector {
@@ -68,7 +71,7 @@
     }
     .photo-blocks-bottom {
       flex-basis: 16%;
-      margin-right: 50px;
+      margin-right: 30px;
       .photo-text {
         color: #777777;
         min-width: 315px;
