--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1411,9 +1411,13 @@ input[type="radio"]:checked + label:after { opacity: 1; -webkit-transform: scale
 
 #wizard .calculator { float: right; }
 
+#wizard .calculator button { background: #fff; color: #ff0000; display: inline-block; border: 1px solid red; font-size: 15px; line-height: 19px; }
+
 #wizard .calculator h3 { line-height: 23px; vertical-align: top; }
 
-#wizard .calculator .count-button { border-radius: 0; margin-left: 10px; width: 50px; height: 58px; }
+#wizard .calculator .count-button { border-radius: 0; margin-left: 10px; width: 50px; height: 50px; }
+
+#wizard .calculator .language-title { font-size: 18px; line-height: 23px; }
 
 #wizard .calculator .plus { position: relative; display: inline-block; background: url("../images/plus.png") 50% no-repeat; }
 
