--- a/uncompiled_scss/styles/_step_two.scss
+++ b/uncompiled_scss/styles/_step_two.scss
@@ -109,6 +109,15 @@
 
   .calculator {
     float: right;
+    button {
+      background: $color-white;
+      color: $color-red;
+      display: inline-block;
+      border: 1px solid red;
+
+      font-size: 15px;
+      line-height: 19px;
+    }
     h3 {
       line-height: 23px;
       vertical-align: top;
@@ -117,8 +126,12 @@
       border-radius: 0;
       margin-left: 10px;
       width: 50px;
-      height: 58px;
+      height: 50px;
 
+    }
+    .language-title{
+      font-size: 18px;
+      line-height: 23px;
     }
     .plus {
       position: relative;
