--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -835,7 +835,7 @@ input[type="number"] { -moz-appearance: textfield; }
 
 .man-profile img { display: inline-block; width: 100%; height: auto; margin-bottom: 20px; }
 
-.title { font-family: "Futura PT Book"; font-size: 25px; color: #ff0000; display: inline-block; position: relative; font-weight: normal; }
+.title { font-family: "Futura PT Book"; font-size: 25px; line-height: 32px; letter-spacing: 0.25em; color: #ff0000; display: inline-block; position: relative; font-weight: bold; }
 
 .title.underlined::after { content: ""; display: inline-block; position: absolute; width: 112px; height: 2px; bottom: -30px; left: 0; background: #ff0000; }
 
@@ -1325,7 +1325,7 @@ input[type="radio"]:checked + label:after { opacity: 1; -webkit-transform: scale
 
 #wizard textarea { resize: none; }
 
-#wizard form { margin-top: 40px; }
+#wizard form { margin-top: 40px; position: relative; width: 100%; padding-bottom: 100px; }
 
 #wizard .title { margin-bottom: 40px; }
 
@@ -1379,11 +1379,15 @@ input[type="radio"]:checked + label:after { opacity: 1; -webkit-transform: scale
 
 #wizard .features .work-checkbox label { text-transform: capitalize; }
 
-#wizard select { background: #fff; padding: 30px 10px 8px 15px; margin-bottom: 20px; width: 100%; border: 1px solid black; -webkit-appearance: none; border-radius: 0; background: url("../images/arrow.svg") 98% 50% no-repeat; background-size: 16px; }
+#wizard select { background-color: #fff; padding: 30px 10px 8px 15px; margin-bottom: 20px; width: 100%; border: 1px solid black; -webkit-appearance: none; border-radius: 0; background-position: calc(100% - 10px) 50%; background-repeat: no-repeat; background-image: url(‘../images/arrow.svg’); background-size: 16px; }
 
 #wizard .work-blocks { display: inline-block; margin-left: 40px; }
 
-#wizard .forward { border: none; }
+#wizard .forward { border: none; position: absolute; bottom: 0; }
+
+#wizard .personal { position: relative; }
+
+#wizard .personal .calculator { position: absolute; top: 0; right: 0; }
 
 #wizard .work-input { display: -webkit-inline-box; display: -ms-inline-flexbox; display: inline-flex; margin: 40px 20px 1px 40px; vertical-align: top; }
 
@@ -1407,11 +1411,13 @@ input[type="radio"]:checked + label:after { opacity: 1; -webkit-transform: scale
 
 #wizard .skills-special .work-checkbox { margin: 0 10px; width: 31%; }
 
+#wizard .add-education { font-family: "Futura PT Book"; font-size: 25px; line-height: 32px; color: #ff0000; display: inline-block; position: relative; font-weight: bold; }
+
 #wizard .contacts .input-checkbox { margin-left: 0; }
 
 #wizard .calculator { float: right; }
 
-#wizard .calculator button { background: #fff; color: #ff0000; display: inline-block; border: 1px solid red; font-size: 15px; line-height: 19px; }
+#wizard .calculator button { background: #fff; color: #ff0000; display: block; border: 1px solid red; font-size: 15px; line-height: 19px; }
 
 #wizard .calculator h3 { line-height: 23px; vertical-align: top; }
 
