--- a/uncompiled_scss/styles/_step_one.scss
+++ b/uncompiled_scss/styles/_step_one.scss
@@ -32,6 +32,9 @@
   }
   form {
     margin-top: 40px;
+    position: relative;
+    width: 100%;
+    padding-bottom: 100px;
   }
   .title {
     margin-bottom: 40px;
