--- a/uncompiled_scss/styles/_step_two.scss
+++ b/uncompiled_scss/styles/_step_two.scss
@@ -22,14 +22,16 @@
   }
 
   select {
-    background: #fff;
+    background-color: #fff;
     padding: 30px 10px 8px 15px;
     margin-bottom: 20px;
     width: 100%;
     border: 1px solid black;
     -webkit-appearance: none;
     border-radius: 0;
-    background: url('../images/arrow.svg') 98% 50% no-repeat;
+    background-position: calc(100% - 10px) 50%;
+    background-repeat: no-repeat;
+    background-image: url(‘../images/arrow.svg’);
     background-size: 16px;
   }
 
@@ -39,6 +41,16 @@
   }
   .forward {
     border: none;
+    position: absolute;
+    bottom: 0;
+  }
+  .personal {
+    position: relative;
+    .calculator {
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
   }
 
   .work-input {
@@ -101,6 +113,15 @@
     }
 
   }
+  .add-education {
+    font-family: "Futura PT Book";
+    font-size: 25px;
+    line-height: 32px;
+    color: $color-red;
+    display: inline-block;
+    position: relative;
+    font-weight: bold;
+  }
   .contacts {
     .input-checkbox {
       margin-left: 0;
@@ -112,7 +133,7 @@
     button {
       background: $color-white;
       color: $color-red;
-      display: inline-block;
+      display: block;
       border: 1px solid red;
 
       font-size: 15px;
@@ -129,7 +150,7 @@
       height: 50px;
 
     }
-    .language-title{
+    .language-title {
       font-size: 18px;
       line-height: 23px;
     }
