--- a/uncompiled_scss/styles/_step_two.scss
+++ b/uncompiled_scss/styles/_step_two.scss
@@ -31,7 +31,7 @@
     border-radius: 0;
     background-position: calc(100% - 10px) 50%;
     background-repeat: no-repeat;
-    background-image: url(‘../images/arrow.svg’);
+    background-image: url(/assets/images/arrow.png);
     background-size: 16px;
   }
 
@@ -44,7 +44,7 @@
     position: absolute;
     bottom: 0;
   }
-  .personal {
+  .input {
     position: relative;
     .calculator {
       position: absolute;
@@ -152,7 +152,8 @@
     }
     .language-title {
       font-size: 18px;
-      line-height: 23px;
+      padding-bottom: 0;
+      margin-bottom: 0;
     }
     .plus {
       position: relative;
