--- a/uncompiled_scss/styles/_step_two.scss
+++ b/uncompiled_scss/styles/_step_two.scss
@@ -29,9 +29,9 @@
     border: 1px solid black;
     -webkit-appearance: none;
     border-radius: 0;
-    background-position: calc(100% - 10px) 50%;
+    background-position: calc(100% - 10px) 51%;
     background-repeat: no-repeat;
-    background-image: url(/assets/images/arrow.png);
+    background-image: url("../images/arrow.svg");
     background-size: 16px;
   }
 
