--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1159,7 +1159,7 @@ input[type="number"] { -moz-appearance: textfield; }
 
 .shadow-layer .shadow-layer-films .shadow-film { -webkit-transition: -webkit-filter 500ms ease-in-out; transition: -webkit-filter 500ms ease-in-out; -o-transition: filter 500ms ease-in-out; transition: filter 500ms ease-in-out; transition: filter 500ms ease-in-out, -webkit-filter 500ms ease-in-out; -webkit-filter: grayscale(100%); filter: grayscale(100%); position: relative; }
 
-.shadow-layer .shadow-layer-films .shadow-film::after { content: ''; display: block; position: absolute; top: 0; opacity: 0; bottom: 0; left: 0; right: 0; background: url("../images/eye.svg") center no-repeat; }
+.shadow-layer .shadow-layer-films .shadow-film::after { content: ''; display: block; position: absolute; opacity: 0; top: 0; bottom: 0; left: 0; right: 0; background: url("../images/eye.svg") center no-repeat; background-size: contain; margin: auto; width: 40px; height: 40px; }
 
 .shadow-layer .shadow-layer-films .shadow-film:hover { cursor: pointer; -webkit-filter: grayscale(0%); filter: grayscale(0%); }
 
