--- a/uncompiled_scss/styles/_shadow_layers.scss
+++ b/uncompiled_scss/styles/_shadow_layers.scss
@@ -18,12 +18,19 @@
         content: '';
         display: block;
         position: absolute;
-        top: 0;
         opacity: 0;
+
+        top: 0;
         bottom: 0;
         left: 0;
         right: 0;
+
         background: url('../images/eye.svg') center no-repeat;
+        background-size: contain;
+
+        margin: auto;
+        width: 40px;
+        height: 40px;
       }
 
       &:hover {
