Объединил шаги, свертсал анкеты кинодеятеля и компании, переверстал анкету таланта

--- a/uncompiled_scss/style.scss
+++ b/uncompiled_scss/style.scss
@@ -28,8 +28,10 @@
 @import "styles/login_form";
 @import "styles/inputs";
 @import "styles/wizard";
-@import "styles/step_one";
-@import "styles/step_two";
+@import "styles/form_filmmaker";
+@import "styles/form_talents";
+@import "styles/forms";
+@import "styles/photo_card";
 
 
 body {
