--- a/uncompiled_scss/styles/_header.scss
+++ b/uncompiled_scss/styles/_header.scss
@@ -3,14 +3,13 @@
   .title-steps{
     position: absolute;
     padding: 40px 60px 5px 8px;
-    top: -25px;
-    left: 220px;
-    background: #777777;
-    font-size: 12px;
-    line-height: 15px;
-    letter-spacing: 0.15em;
+    top:0;
+    right: 300px;
+    font-size: 25px;
+    line-height: 32px;
+    letter-spacing: 0.25em;
     text-transform: uppercase;
-    color: #fff;
+    color: red;
   }
   .link-to-home {
     position: absolute;
