--- a/uncompiled_scss/styles/_inputs.scss
+++ b/uncompiled_scss/styles/_inputs.scss
@@ -1,3 +1,36 @@
+.input-blocks {
+  margin-bottom: 10px;
+  label {
+    line-height: 50px;
+    vertical-align: top;
+  }
+  input {
+    width: 100%;
+    color: #777777;
+
+    padding: 30px 10px 8px 15px;
+    margin-bottom: 20px;
+    border: 1px solid black;
+    &::placeholder {
+      font-size: 18px;
+      line-height: 23px;
+      color: #777777;
+    }
+  }
+}
+
+
+
+
+.input-checkbox {
+  margin: 30px 0 50px 26%;
+  label {
+    padding-right: 100px;
+  }
+}
+
+
+
 
 input[type="checkbox"]:checked,
 [type="checkbox"]:not(:checked) {
