--- a/uncompiled_scss/styles/_login_form.scss
+++ b/uncompiled_scss/styles/_login_form.scss
@@ -1,5 +1,20 @@
+
 .form-box {
-  padding-right: 20%;
+  .careers-checkbox {
+    margin-right: -60%;
+    .career {
+      .description {
+        width: 40%;
+        padding-left: 40px;
+      }
+      .red {
+        text-transform: uppercase;
+      }
+    }
+  }
+  .inputs {
+    padding-right: 20%;
+  }
   .form-checkbox {
     margin-bottom: 25px;
     label {
@@ -9,7 +24,7 @@
 
   input {
     background: white;
-    color: #777777;
+    color: #E9E8E6;
     display: block;
     width: 100%;
 
@@ -64,6 +79,15 @@ body.blacked {
   .form-box {
     input {
       background: #C4C4C4;
+    }
+
+    .careers {
+      display: inline-flex;
+      .career {
+        p {
+          color: $color-white;
+        }
+      }
     }
 
     .button,
