--- a/uncompiled_scss/styles/_wizard.scss
+++ b/uncompiled_scss/styles/_wizard.scss
@@ -1,22 +1,31 @@
 
-.steps {
-  float: right;
-  li {
-    margin-bottom: 16px;
-    display: flex;
-    align-items: center;
-    height: 31px;
-    position: relative;
-    a {
-      color: black;
-      text-transform: uppercase;
-      font-size: 18px;
-      line-height: 23px;
-      text-decoration: none;
+#wizard{
+  .form{
+    margin: 50px 0;
+  }
+
+  .number {
+    display: none;
+  }
+  .steps {
+    float: right;
+    li {
+      margin-bottom: 16px;
+      display: flex;
+      align-items: center;
+      height: 31px;
+      position: relative;
+      a {
+        color: black;
+        text-transform: uppercase;
+        font-size: 18px;
+        line-height: 23px;
+        text-decoration: none;
+      }
     }
   }
-}
 
-.content h4 {
-  display: none;
+  .content h4 {
+    display: none;
+  }
 }
