--- a/uncompiled_scss/styles/_forms.scss
+++ b/uncompiled_scss/styles/_forms.scss
@@ -14,6 +14,16 @@
       }
     }
   }
+  .model-checkbox{
+    margin-left: 10px;
+    margin-top: 15px;
+  }
+  .model{
+    margin-top: 20px;
+    label{
+      line-height: 50px;
+    }
+  }
   .gender {
     margin: 30px 0;
     .women {
